--- a/a_final_money/src/main/res/layout/record_item_layout.xml
+++ b/a_final_money/src/main/res/layout/record_item_layout.xml
@@ -46,7 +46,7 @@
         <TextView
             android:id="@+id/list_state"
             android:layout_width="90dp"
-            android:layout_height="24dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="18sp"
             android:gravity="center_horizontal" />
